# rgfn

./: README.md  pyproject.toml  run_bo.py
configs/bo/: bo_base.gin  bo_test.gin
rgfn/bo/: acquisition_proxy.py  bo_loop.py  bo_metrics.py  gp_surrogate.py
rgfn/gfns/reaction_gfn/api/: data_structures.py
rgfn/trainer/: trainer.py
rgfn/trainer/logger/: dummy_logger.py  wandb_logger.py
